--- a/BPR.ipynb
+++ b/BPR.ipynb
@@ -80,16 +80,16 @@
     }
    ],
    "source": [
-    "all_interactions = make_json_i('Raw_interactions.csv')\n",
-    "data_train = make_json_i('interactions_train.csv')\n",
-    "data_val = make_json_i('interactions_validation.csv')\n",
-    "data_test = make_json_i('interactions_test.csv')\n",
+    "all_interactions = make_json_i('data/Raw_interactions.csv')\n",
+    "data_train = make_json_i('data/interactions_train.csv')\n",
+    "data_val = make_json_i('data/interactions_validation.csv')\n",
+    "data_test = make_json_i('data/interactions_test.csv')\n",
     "all_interactions[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "c715009c",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "19b18c30",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c7090c00",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "231637"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "e16adc36",
    "metadata": {},
    "outputs": [],
@@ -168,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "6f148101",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e96ab42e481449ec95adc8db45e4269e",
+       "model_id": "db795149d5c44f9696583082f4e526bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -194,21 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "2612a618",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictions = []\n",
     "for u, i, d in newTest:\n",
@@ -231,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "33891d10",
    "metadata": {},
    "outputs": [],
@@ -279,26 +268,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "fdb69b93",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(2, 0.46551585708550786),\n",
-       " (1.75, 0.45419510236852667),\n",
-       " (1.5, 0.43934162986752306),\n",
-       " (1.33, 0.40144520272982737),\n",
-       " (1.25, 0.36547571256523487),\n",
-       " (1.2, 0.337173825772782)]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracies"
    ]
@@ -328,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
